feat: translate text pages group1

--- a/blog.html
+++ b/blog.html
@@ -316,7 +316,7 @@
                   <img src="img/blog/main-blog/m-blog-3.jpg" alt="" />
                   <div class="blog_details">
                     <a href="single-blog.html">
-                      <h2>Encuentra los mejors regalos</h2>
+                      <h2>Encuentra los mejores regalos</h2>
                     </a>
                     <p>
                       Tenemos miles de sorpresas para ti y tu familia. Aquí podrás encontrar eso que necesitas o que hará ilusión a los tuyos. 
@@ -412,7 +412,7 @@
                   <img src="img/blog/main-blog/m-blog-5.jpg" alt="" />
                   <div class="blog_details">
                     <a href="single-blog.html">
-                      <h2>Tecnología puntero para que tardes menos</h2>
+                      <h2>Tecnología puntera para que tardes menos en tus compras.</h2>
                     </a>
                     <p>
                       Aplicamos la tecnología más puntera para que no pases por caja si lo deseas y puedas pagar en nuestros más de 30 puntos libres dentro de la tienda y salir no sea una faena.
@@ -473,8 +473,8 @@
             </aside>
             <aside class="single_sidebar_widget author_widget">
               <img class="author_img rounded-circle" src="img/blog/author.png" alt="" />
-              <h4>Charlie Barber</h4>
-              <p>Senior blog writer</p>
+              <h4>Carlos Barbero</h4>
+              <p>Bloggero Experto</p>
               <div class="social_icon">
                 <a href="#">
                   <i class="fab fa-facebook-f"></i>
@@ -490,10 +490,7 @@
                 </a>
               </div>
               <p>
-                Boot camps have its supporters andit sdetractors. Some people
-                do not understand why you should have to spend money on boot
-                camp when you can get. Boot camps have itssuppor ters andits
-                detractors.
+                Recopilo, comento y soy un entusiasta del comercio online. Sigue mis comentarios y publicaciones para mantenerte actualizado, no te pierdas ninguno.
               </p>
               <div class="br"></div>
             </aside>
@@ -645,7 +642,7 @@
   <section class="instagram_area">
     <div class="container box_1620">
       <div class="insta_btn">
-        <a class="btn theme_btn" href="#">Follow us on instagram</a>
+        <a class="btn theme_btn" href="#">Síguenos en Instagram</a>
       </div>
       <div class="instagram_image row m0">
         <a href="#"><img src="img/instagram/ins-1.jpg" alt="" /></a>
