--- a/category.html
+++ b/category.html
@@ -141,42 +141,41 @@
                 <form action="#">
                   <ul>
                     <li class="filter-list">
-                      <input class="pixel-radio" type="radio" id="men" name="brand" /><label for="men">Men<span>
-                          (3600)</span></label>
+                      <input class="pixel-radio" type="radio" id="men" name="brand" /><label for="men">Alimentación<span>
+                          (3789)</span></label>
                     </li>
                     <li class="filter-list">
-                      <input class="pixel-radio" type="radio" id="women" name="brand" /><label for="women">Women<span>
-                          (3600)</span></label>
+                      <input class="pixel-radio" type="radio" id="women" name="brand" /><label for="women">Belleza y salud<span>
+                          (4069)</span></label>
                     </li>
                     <li class="filter-list">
-                      <input class="pixel-radio" type="radio" id="accessories" name="brand" /><label
-                        for="accessories">Accessories<span> (3600)</span></label>
+                      <input class="pixel-radio" type="radio" id="accessories" name="brand" />Deportes<label
+                        for="accessories"><span> (2909)</span></label>
                     </li>
                     <li class="filter-list">
                       <input class="pixel-radio" type="radio" id="footwear" name="brand" /><label
-                        for="footwear">Footwear<span> (3600)</span></label>
+                        for="footwear">Hogar<span> (5290)</span></label>
                     </li>
                     <li class="filter-list">
-                      <input class="pixel-radio" type="radio" id="bayItem" name="brand" /><label for="bayItem">Bay
-                        item<span> (3600)</span></label>
+                      <input class="pixel-radio" type="radio" id="bayItem" name="brand" /><label for="bayItem">Bricolage<span> (1463)</span></label>
                     </li>
-                    <li class="filter-list">
+                    <!-- <li class="filter-list">
                       <input class="pixel-radio" type="radio" id="electronics" name="brand" /><label
                         for="electronics">Electronics<span> (3600)</span></label>
                     </li>
                     <li class="filter-list">
                       <input class="pixel-radio" type="radio" id="food" name="brand" /><label for="food">Food<span>
                           (3600)</span></label>
-                    </li>
+                    </li> -->
                   </ul>
                 </form>
               </li>
             </ul>
           </div>
           <div class="sidebar-filter">
-            <div class="top-filter-head">Product Filters</div>
+            <div class="top-filter-head">Filtrado de productos</div>
             <div class="common-filter">
-              <div class="head">Brands</div>
+              <div class="head">Marcas</div>
               <form action="#">
                 <ul>
                   <li class="filter-list">
@@ -189,15 +188,15 @@
                   </li>
                   <li class="filter-list">
                     <input class="pixel-radio" type="radio" id="gionee" name="brand" /><label
-                      for="gionee">Gionee<span>(19)</span></label>
+                      for="gionee">HP<span>(19)</span></label>
                   </li>
                   <li class="filter-list">
                     <input class="pixel-radio" type="radio" id="micromax" name="brand" /><label
-                      for="micromax">Micromax<span>(19)</span></label>
+                      for="micromax">Samsung<span>(19)</span></label>
                   </li>
                   <li class="filter-list">
                     <input class="pixel-radio" type="radio" id="samsung" name="brand" /><label
-                      for="samsung">Samsung<span>(19)</span></label>
+                      for="samsung">LG<span>(19)</span></label>
                   </li>
                 </ul>
               </form>
@@ -208,36 +207,35 @@
                 <ul>
                   <li class="filter-list">
                     <input class="pixel-radio" type="radio" id="black" name="color" /><label
-                      for="black">Black<span>(29)</span></label>
+                      for="black">Negro<span>(126)</span></label>
                   </li>
                   <li class="filter-list">
                     <input class="pixel-radio" type="radio" id="balckleather" name="color" /><label
-                      for="balckleather">Black Leather<span>(29)</span></label>
+                      for="balckleather">Rojo<span>(29)</span></label>
                   </li>
                   <li class="filter-list">
-                    <input class="pixel-radio" type="radio" id="blackred" name="color" /><label for="blackred">Black
-                      with red<span>(19)</span></label>
+                    <input class="pixel-radio" type="radio" id="blackred" name="color" /><label for="blackred">Blanco<span>(82)</span></label>
                   </li>
                   <li class="filter-list">
                     <input class="pixel-radio" type="radio" id="gold" name="color" /><label
-                      for="gold">Gold<span>(19)</span></label>
+                      for="gold">Gold<span>(35)</span></label>
                   </li>
                   <li class="filter-list">
                     <input class="pixel-radio" type="radio" id="spacegrey" name="color" /><label
-                      for="spacegrey">Spacegrey<span>(19)</span></label>
+                      for="spacegrey">Verde<span>(56)</span></label>
                   </li>
                 </ul>
               </form>
             </div>
             <div class="common-filter">
-              <div class="head">Price</div>
+              <div class="head">Precio</div>
               <div class="price-range-area">
                 <div id="price-range"></div>
                 <div class="value-wrapper d-flex">
-                  <div class="price">Price:</div>
+                  <div class="price">desde:</div>
                   <span>$</span>
                   <div id="lower-value"></div>
-                  <div class="to">to</div>
+                  <div class="to">hasta</div>
                   <span>$</span>
                   <div id="upper-value"></div>
                 </div>
@@ -250,16 +248,16 @@
           <div class="filter-bar d-flex flex-wrap align-items-center">
             <div class="sorting">
               <select>
-                <option value="1">Default sorting</option>
-                <option value="1">Default sorting</option>
-                <option value="1">Default sorting</option>
+                <option value="1">Relevancia</option>
+                <option value="1">Precio ascendente</option>
+                <option value="1">Precio descendente</option>
               </select>
             </div>
             <div class="sorting mr-auto">
-              <select>
-                <option value="1">Show 12</option>
-                <option value="1">Show 12</option>
-                <option value="1">Show 12</option>
+             <select>
+                <option value="1">Muestra 10 productos</option>
+                <option value="1">Muestra 20 productos</option>
+                <option value="1">Muestra 50 productos</option>
               </select>
             </div>
             <div>
@@ -317,11 +315,11 @@
                     </ul>
                   </div>
                   <div class="card-body">
-                    <p>Beauty</p>
+                    <p>Belleza y salud</p>
                     <h4 class="card-product__title">
-                      <a href="#">Women Freshwash</a>
+                      <a href="#">Colonia After shave</a>
                     </h4>
-                    <p class="card-product__price">$150.00</p>
+                    <p class="card-product__price">4,15€</p>
                   </div>
                 </div>
               </div>
@@ -342,11 +340,11 @@
                     </ul>
                   </div>
                   <div class="card-body">
-                    <p>Decor</p>
+                    <p>Bricolage</p>
                     <h4 class="card-product__title">
-                      <a href="#">Room Flash Light</a>
+                      <a href="#">Pegamento extrafuerte</a>
                     </h4>
-                    <p class="card-product__price">$150.00</p>
+                    <p class="card-product__price">2,45€</p>
                   </div>
                 </div>
               </div>
@@ -367,11 +365,11 @@
                     </ul>
                   </div>
                   <div class="card-body">
-                    <p>Decor</p>
+                    <p>Alimentación</p>
                     <h4 class="card-product__title">
-                      <a href="#">Room Flash Light</a>
+                      <a href="#">Galletas Nocilla</a>
                     </h4>
-                    <p class="card-product__price">$150.00</p>
+                    <p class="card-product__price">2,99€</p>
                   </div>
                 </div>
               </div>
@@ -392,11 +390,11 @@
                     </ul>
                   </div>
                   <div class="card-body">
-                    <p>Accessories</p>
+                    <p>Belleza y salud</p>
                     <h4 class="card-product__title">
-                      <a href="#">Man Office Bag</a>
+                      <a href="#">Gel higienizante de manos</a>
                     </h4>
-                    <p class="card-product__price">$150.00</p>
+                    <p class="card-product__price">2,18€</p>
                   </div>
                 </div>
               </div>
@@ -417,11 +415,11 @@
                     </ul>
                   </div>
                   <div class="card-body">
-                    <p>Kids Toy</p>
+                    <p>Hogar</p>
                     <h4 class="card-product__title">
-                      <a href="#">Charging Car</a>
+                      <a href="#">Servilletas de papel</a>
                     </h4>
-                    <p class="card-product__price">$150.00</p>
+                    <p class="card-product__price">0,65€</p>
                   </div>
                 </div>
               </div>
@@ -442,11 +440,11 @@
                     </ul>
                   </div>
                   <div class="card-body">
-                    <p>Accessories</p>
+                    <p>Hogar</p>
                     <h4 class="card-product__title">
-                      <a href="#">Blutooth Speaker</a>
+                      <a href="#">Spray Cleaner</a>
                     </h4>
-                    <p class="card-product__price">$150.00</p>
+                    <p class="card-product__price">0,99€</p>
                   </div>
                 </div>
               </div>
@@ -467,11 +465,11 @@
                     </ul>
                   </div>
                   <div class="card-body">
-                    <p>Kids Toy</p>
+                    <p>Jardinería</p>
                     <h4 class="card-product__title">
-                      <a href="#">Charging Car</a>
+                      <a href="#">Maceta de riego automático</a>
                     </h4>
-                    <p class="card-product__price">$150.00</p>
+                    <p class="card-product__price">3,60€</p>
                   </div>
                 </div>
               </div>
@@ -492,11 +490,11 @@
                     </ul>
                   </div>
                   <div class="card-body">
-                    <p>Accessories</p>
+                    <p>Alimentación</p>
                     <h4 class="card-product__title">
-                      <a href="#">Quartz Belt Watch</a>
+                      <a href="#">Aceite de oliva natural 5lt.</a>
                     </h4>
-                    <p class="card-product__price">$150.00</p>
+                    <p class="card-product__price">5,65€</p>
                   </div>
                 </div>
               </div>
@@ -514,7 +512,7 @@
     <div class="container">
       <div class="section-intro pb-60px">
         <p>Artículo popular en el mercado</p>
-        <h2>Top <span class="section-intro__style">Product</span></h2>
+        <h2>Productos<span class="section-intro__style"> Top</span></h2>
       </div>
       <div class="row mt-30">
         <div class="col-sm-6 col-xl-3 mb-4 mb-xl-0">
@@ -522,22 +520,22 @@
             <div class="single-search-product d-flex">
               <a href="#"><img src="img/product/product-sm-1.jpg" alt="" /></a>
               <div class="desc">
-                <a href="#" class="title">Gray Coffee Cup</a>
-                <div class="price">$170.00</div>
+                <a href="#" class="title">Gafas Sport</a>
+                <div class="price">9,95€</div>
               </div>
             </div>
             <div class="single-search-product d-flex">
               <a href="#"><img src="img/product/product-sm-2.jpg" alt="" /></a>
               <div class="desc">
-                <a href="#" class="title">Gray Coffee Cup</a>
-                <div class="price">$170.00</div>
+                <a href="#" class="title">Set Maquillaje</a>
+                <div class="price">12,15€</div>
               </div>
             </div>
             <div class="single-search-product d-flex">
               <a href="#"><img src="img/product/product-sm-3.jpg" alt="" /></a>
               <div class="desc">
-                <a href="#" class="title">Gray Coffee Cup</a>
-                <div class="price">$170.00</div>
+                <a href="#" class="title">Pegamento extrafuerte</a>
+                <div class="price">2,45€</div>
               </div>
             </div>
           </div>
@@ -548,22 +546,22 @@
             <div class="single-search-product d-flex">
               <a href="#"><img src="img/product/product-sm-4.jpg" alt="" /></a>
               <div class="desc">
-                <a href="#" class="title">Gray Coffee Cup</a>
-                <div class="price">$170.00</div>
+                <a href="#" class="title">Cable HDMI</a>
+                <div class="price">2,99€</div>
               </div>
             </div>
             <div class="single-search-product d-flex">
               <a href="#"><img src="img/product/product-sm-5.jpg" alt="" /></a>
               <div class="desc">
-                <a href="#" class="title">Gray Coffee Cup</a>
-                <div class="price">$170.00</div>
+                <a href="#" class="title">Smartwatch</a>
+                <div class="price">16,99€</div>
               </div>
             </div>
             <div class="single-search-product d-flex">
               <a href="#"><img src="img/product/product-sm-6.jpg" alt="" /></a>
               <div class="desc">
-                <a href="#" class="title">Gray Coffee Cup</a>
-                <div class="price">$170.00</div>
+                <a href="#" class="title">Pendrive 64GB</a>
+                <div class="price">5,95€</div>
               </div>
             </div>
           </div>
@@ -574,22 +572,22 @@
             <div class="single-search-product d-flex">
               <a href="#"><img src="img/product/product-sm-7.jpg" alt="" /></a>
               <div class="desc">
-                <a href="#" class="title">Gray Coffee Cup</a>
-                <div class="price">$170.00</div>
+                <a href="#" class="title">Rasuradora Lite</a>
+                <div class="price">18,95€</div>
               </div>
             </div>
             <div class="single-search-product d-flex">
               <a href="#"><img src="img/product/product-sm-8.jpg" alt="" /></a>
               <div class="desc">
-                <a href="#" class="title">Gray Coffee Cup</a>
-                <div class="price">$170.00</div>
+                <a href="#" class="title">Colonia After Shave</a>
+                <div class="price">4,15€</div>
               </div>
             </div>
             <div class="single-search-product d-flex">
               <a href="#"><img src="img/product/product-sm-9.jpg" alt="" /></a>
               <div class="desc">
-                <a href="#" class="title">Gray Coffee Cup</a>
-                <div class="price">$170.00</div>
+                <a href="#" class="title">Gel higienizante</a>
+                <div class="price">2,18€</div>
               </div>
             </div>
           </div>
@@ -600,22 +598,22 @@
             <div class="single-search-product d-flex">
               <a href="#"><img src="img/product/product-sm-10.jpg" alt="" /></a>
               <div class="desc">
-                <a href="#" class="title">Gray Coffee Cup</a>
-                <div class="price">$170.00</div>
+                <a href="#" class="title">Galletas Nocilla</a>
+                <div class="price">2,99€</div>
               </div>
             </div>
             <div class="single-search-product d-flex">
               <a href="#"><img src="img/product/product-sm-11.jpg" alt="" /></a>
               <div class="desc">
-                <a href="#" class="title">Gray Coffee Cup</a>
-                <div class="price">$170.00</div>
+                <a href="#" class="title">Spray Cleaner</a>
+                <div class="price">0,99€</div>
               </div>
             </div>
             <div class="single-search-product d-flex">
               <a href="#"><img src="img/product/product-sm-12.jpg" alt="" /></a>
               <div class="desc">
-                <a href="#" class="title">Gray Coffee Cup</a>
-                <div class="price">$170.00</div>
+                <a href="#" class="title">Set cuchillos</a>
+                <div class="price">4,95€</div>
               </div>
             </div>
           </div>
@@ -633,15 +631,14 @@
           Obtenga actualizaciones desde cualquier lugar
         </h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Id,
-          deleniti.
+          Sólo te tomará un minuto agregarte a nuestra Newsletter.
         </p>
         <div id="mc_embed_signup">
           <form target="_blank"
             action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
             method="get" class="subscribe-form form-inline mt-5 pt-1">
             <div class="form-group ml-sm-auto">
-              <input class="form-control mb-1" type="email" name="EMAIL" placeholder="Enter your email"
+              <input class="form-control mb-1" type="email" name="EMAIL" placeholder="Escribe tu correo"
                 onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Email Address '" />
               <div class="info"></div>
             </div>
