--- a/index.html
+++ b/index.html
@@ -350,19 +350,27 @@
           </div>
           <div class="col-md-6 col-lg-4 col-xl-3">
             <div class="card text-center card-product">
-              <!--<div class="card-product__img">
-                <img class="card-img" src="img/product/product8.png" alt="">
+              <div class="card-product__img">
+                <img class="card-img" src="img/product/product8.jpg" alt=""/>
                 <ul class="card-product__imgOverlay">
                   <li><button><i class="ti-search"></i></button></li>
                   <li><button><i class="ti-shopping-cart"></i></button></li>
                   <li><button><i class="ti-heart"></i></button></li>
                 </ul>
-              </div>-->
-              <!--<div class="card-body">
-                <p>Kids Toy</p>
-                <h4 class="card-product__title"><a href="#">Charging Car</a></h4>
-                <p class="card-product__price">$150.00</p>
-              </div>-->
+              </div>
+              <div class="card-body">
+                <p>Jardinería</p>
+                <h4 class="card-product__title">
+                  <a href="single-product.html">Maceta de riego automático</a>
+                </h4>
+                <p class="card-product__price">3,60€</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 col-xl-3">
+            <div class="card text-center card-product">
+              <div class="card-product__img">                               
+              </div>                
             </div>
           </div>
         </div>
@@ -377,16 +385,16 @@
         <div class="row">
           <div class="col-xl-5">
             <div class="offer__content text-center">
-              <h3>Up To 50% Off</h3>
-              <h4>Winter Sale</h4>
-              <p>Him she'd let them sixth saw light</p>
-              <a class="button button--active mt-3 mt-xl-4" href="#">Shop Now</a>
+              <h3>Hasta 50% descuento</h3>
+              <h4>Venta de invierno</h4>
+              <p>Deslumbra a todos con las ofertas</p>
+              <a class="button button--active mt-3 mt-xl-4" href="#">Compra ahora</a>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- ================ offer section end ================= -->
+    <!-- ================ o ffer section end ================= -->
 
     <!-- ================ Best Selling item  carousel ================= -->
     <section class="section-margin calc-60px">
@@ -486,7 +494,7 @@
             <div class="card-body">
               <p>Alimentación</p>
               <h4 class="card-product__title">
-                <a href="single-product.html">Nocilla Cookies</a>
+                <a href="single-product.html">Galletas Nocilla</a>
               </h4>
               <p class="card-product__price">2,99€</p>
             </div>
@@ -604,7 +612,7 @@
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-0">
             <div class="card card-blog">
               <div class="card-blog__img">
-                <img class="card-img rounded-0" src="img/blog/blog1.png" alt="" />
+                <img class="card-img rounded-0" src="img/blog/blog1.jpg" alt="" />
               </div>
               <div class="card-body">
                 <ul class="card-blog__info">
@@ -628,7 +636,7 @@
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-0">
             <div class="card card-blog">
               <div class="card-blog__img">
-                <img class="card-img rounded-0" src="img/blog/blog2.png" alt="" />
+                <img class="card-img rounded-0" src="img/blog/blog2.jpg" alt="" />
               </div>
               <div class="card-body">
                 <ul class="card-blog__info">
