--- a/index.html
+++ b/index.html
@@ -824,6 +824,9 @@
   <script src="vendors/jquery.ajaxchimp.min.js"></script>
   <script src="vendors/mail-script.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/functions.js"></script>
+  <script src="js/productos.js"></script>
+  <script src="js/testfunctions-sandra.js"></script>
 </body>
 
 </html>
