test functions alma

--- a/index.html
+++ b/index.html
@@ -827,6 +827,7 @@
   <script src="js/functions.js"></script>
   <script src="js/productos.js"></script>
   <script src="js/testfunctions-sandra.js"></script>
+  <script src="/js/testfunctions-alma.js"></script>
 </body>
 
 </html>
