--- a/index.html
+++ b/index.html
@@ -826,7 +826,8 @@
   <script src="js/main.js"></script>
   <script src="js/functions.js"></script>
   <script src="js/productos.js"></script>
-  <script src="js/testfunctions-sandra.js"></script>
+ <!-- <script src="js/testfunctions-sandra.js"></script> -->
+  <script src="./js/testfunctions-tania.js"></script>
 </body>
 
 </html>
