--- a/index.html
+++ b/index.html
@@ -827,6 +827,8 @@
   <script src="js/functions.js"></script>
   <script src="js/productos.js"></script>
   <script src="js/testfunctions-sandra.js"></script>
+  <script src="js/testfunctions-dorian.js"></script>
+
 </body>
 
 </html>
