hotfix: remove test files and create controller file

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
           <div class="col-md-6 col-lg-4 col-xl-3">
             <div class="card text-center card-product">
               <div class="card-product__img">
-                <img class="card-img" src="img/product/product8.jpg" alt=""/>
+                <img class="card-img" src="img/product/product8.jpg" alt="" />
                 <ul class="card-product__imgOverlay">
                   <li><button><i class="ti-search"></i></button></li>
                   <li><button><i class="ti-shopping-cart"></i></button></li>
@@ -369,8 +369,8 @@
           </div>
           <div class="col-md-6 col-lg-4 col-xl-3">
             <div class="card text-center card-product">
-              <div class="card-product__img">                               
-              </div>                
+              <div class="card-product__img">
+              </div>
             </div>
           </div>
         </div>
@@ -625,8 +625,9 @@
                   <a href="single-blog.html">Crema catalana:Como hacer esta clásica receta?</a>
                 </h4>
                 <p>
-                09/03/2022 La crema catalana és el postre más típico y tradicional de Catalunya, sobretodo durante la festividad de Sant Josep.
-                Descubre el origen, los ingredientes y la preparación de esta clásica receta.
+                  09/03/2022 La crema catalana és el postre más típico y tradicional de Catalunya, sobretodo durante la
+                  festividad de Sant Josep.
+                  Descubre el origen, los ingredientes y la preparación de esta clásica receta.
                 </p>
                 <a class="card-blog__link" href="#">Seguir Leyendo <i class="ti-arrow-right"></i></a>
               </div>
@@ -648,9 +649,11 @@
                 <h4 class="card-blog__title">
                   <a href="single-blog.html">Propiedades y beneficios del kiwi</a>
                 </h4>
-                <p>07/03/2022 El kiwi es una de las frutas más inconfundibles por su sabor, forma,color y capacidad para ayudar a la salud digestiva.
-                  Pero esto no és todo. Revelaremos algunos d elos beneficios menos conocidos del Kiwi, para que te animes a incluirlo en tu dieta diaria.
-               
+                <p>07/03/2022 El kiwi es una de las frutas más inconfundibles por su sabor, forma,color y capacidad para
+                  ayudar a la salud digestiva.
+                  Pero esto no és todo. Revelaremos algunos d elos beneficios menos conocidos del Kiwi, para que te
+                  animes a incluirlo en tu dieta diaria.
+
                 </p>
                 <a class="card-blog__link" href="#">Seguir Leyendo <i class="ti-arrow-right"></i></a>
               </div>
@@ -674,7 +677,8 @@
                 </h4>
                 <p>
                   04/02/2022 La primera curiosidad es que se llaman frutos secos por que presentan
-                  menos de un 50% de agua en su composición.Descubriremos más sobre ellos y contradeciremos su mala fama revelando
+                  menos de un 50% de agua en su composición.Descubriremos más sobre ellos y contradeciremos su mala fama
+                  revelando
                   cuales son sus propiedades y beneficios.
                 </p>
                 <a class="card-blog__link" href="#">Seguir Leyendo <i class="ti-arrow-right"></i></a>
@@ -732,7 +736,7 @@
               <p>
                 Los mejores productos a los mejores precios, es nuestro lema y todo en solo 48 horas!
               </p>
-         
+
               <p></p>
             </div>
           </div>
@@ -826,10 +830,7 @@
   <script src="js/main.js"></script>
   <script src="js/functions.js"></script>
   <script src="js/productos.js"></script>
-  <script src="js/testfunctions-sandra.js"></script>
-  <script src="js/testfunctions-dorian.js"></script>
-  <script src="/js/testfunctions-alma.js"></script>
-  <script src="./js/testfunctions-tania.js"></script>
+  <script src="js/controlador.js"></script>
 </body>
 
 </html>
